--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+
 @import "tailwindcss";
+
+@theme {
+  --font-yw: "Saira", sans-serif;
+  --font-ab: "Patrick Hand", cursiver;
+  --color-logo: #FF385C;
+
+}
